  installing the Windows Installer package and vice-versa.
* Source packages are now compressed using xz instead of bzip2.
* GTK+ is disabled by default in Autotools and CMake.
* SS7 Point Codes can now be resolved into names with a hosts-like file.
* Wireshark can now go fullscreen to have more room for packets.
* TShark can now export objects like the other GUI interfaces.

//=== Removed Dissectors

//=== New File Format Decoding Support

=== New Protocol Support

// Add one protocol per line between the --sort-and-group-- delimiters.
--sort-and-group--
Nordic BLE Sniffer
Ericsson A-bis TFP (Traffic Forwarding Protocol)
Ericsson A-bis P-GSL
vSocket
ISO 15765
Unified Diagnostic Services (UDS)
SCTE-35 Digital Program Insertion Messages
Windows Cluster Management API (clusapi)
RFTap Protocol
M2 Application Protocol
CAN FD
Bluetooth HCI Vendor Intel
High-speed SECS message service (HSMS)
GSM Osmux
Health Level 7 (HL7)
Local Service Discovery (LSD)
Fc00/cjdns Protocol
iPerf2
Snort Post-dissector

--sort-and-group--

=== Updated Protocol Support

Too many protocols have been updated to list here.

=== New and Updated Capture File Support

_Non-empty section placeholder._
// Add one file type per line between the --sort-and-group-- delimiters.
--sort-and-group--
--sort-and-group--

=== New and Updated Capture Interfaces support

_Non-empty section placeholder._
--sort-and-group--
--sort-and-group--

//=== Major API Changes
IEEE802.11: wlan_mgt display filter element got renamed to wlan.

== Getting Wireshark

Wireshark source code and installation packages are available from
https://www.wireshark.org/download.html.

=== Vendor-supplied Packages

Most Linux and Unix vendors supply their own Wireshark packages. You can
usually install or upgrade Wireshark using the package management system
specific to that platform. A list of third-party packages can be found
on the https://www.wireshark.org/download.html#thirdparty[download page]
on the Wireshark web site.
