@@ -132,7 +132,7 @@ set(_all_manifest_contents "# Files required for all sections. Generated by CMak
 foreach(_dll ${GLIB2_DLLS} ${CARES_DLL} ${GCRYPT_DLLS} ${GEOIP_DLL}
 		${GNUTLS_DLLS} ${KERBEROS_DLLS} ${LIBSSH_DLL} ${LUA_DLL}
 		${LZ4_DLL} ${NGHTTP2_DLL} ${SBC_DLL} ${SMI_DLL} ${SNAPPY_DLL}
-		${WINSPARKLE_DLL} ${ZLIB_DLL}
+		${SPANDSP_DLL} ${WINSPARKLE_DLL} ${ZLIB_DLL}
 	)
 	set(_all_manifest_contents "${_all_manifest_contents}File \"\${STAGING_DIR}\\${_dll}\"\n")
 endforeach()
